2013-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: close(compout).

2013-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Add debugging statement.
	* common-src/sockaddr-util.c (str_sockaddr_r, str_sockaddr_no_port_r):
	  New thread safe function.
	* common-src/sockaddr-util.h (str_sockaddr_r, str_sockaddr_no_port_r):
	  New prototype.
	* server-src/dumper.c: Open indirecttcp connection.
	* xfer-src/element-glue.c (do_directtcp_connect): Open indirecttcp
	  connection.

2013-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Handle holdingdisk NEVER and taperflush > 0.

2013-02-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.c: Add fe_sendbackup_state amfeature.
	* common-src/amfeatures.h: Add fe_sendbackup_state amfeature.
	* client-src/client_util.c: Parse RECOVER-DUMP-STATE-FILE application
	  feature.
	* ndmp-src/ndma_noti_calls.c (ndma_send_logmsg): return if !from_conn.
	* perl/Amanda/Extract.pm: Parse recover-dump-state-file application
	  feature.
	* server-src/amfetchdump.pl: Pass --recover-dump-state-file to
	  application.
	* server-src/driver.c (short_dump_state): Add directq.
	* server-src/dumper.c: Parse 'sendbackup state' line and put them in
	  the dump state file.

2013-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/regenerate/regenerate: Add the nanosleep module.
	* config/gnulib/dup2.m4, config/gnulib/gnulib-cache.m4,
	  config/gnulib/gnulib-comp.m4, config/gnulib/nanosleep.m4,
	  config/gnulib/select.m4, config/gnulib/sigaction.m4,
	  config/gnulib/signalblocking.m4,
	  config/gnulib/sys_select_h.m4: New config files.
	* gnulib/Makefile.am: Update for new modules.
	* gnulib/alloca.c, gnulib/dup2.c, gnulib/intprops.h,
	  gnulib/nanosleep.c, gnulib/select.c, gnulib/sig-handler.c,
	  gnulib/sig-handler.h, gnulib/sigaction.c, gnulib/sigprocmask.c,
	  gnulib/sys_select.in.h: New files.
